web-infras/parser/tests/fixtures/esprima/ES6/object-initialiser/invalid-proto-getter-literal-identifier/output.txt
[SyntaxError]: property name __proto__ appears more than once in object literal (1,40)
1|({ get __proto(){}, "__proto__": null, __proto__: null, })
 |                                      ^
